<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bmi_calculator">BMI Calc</string>
    <string name="exercise_list">Exercises</string>
    <string name="progress">Progress</string>
    <string name="bmi_calculator_header">BMI CALCULATOR</string>
    <string name="weight_in_lb">Weight(LB)</string>
    <string name="height_in_ft">Height(Ft)</string>
    <string name="calculateBMI">BMI Calculator</string>
    <string name="hintWeight">Enter Weight (lbs)</string>
    <string name="hintHeightF">Enter Height (Ft)</string>
    <string name="hintHeightI">Enter Height(Inches)</string>
    <string name="calculateButton">Calculate BMI</string>
    <string name="results">Results</string>
    <string name="reset">Reset</string>
    <string name="Sets">SETS</string>
    <string name="repetition">Reps</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="track_calories">Track Calories</string>
    <string name="food_list">Food List</string>
    <string name="placeholder">Placeholder</string>
    <string name="myworkoutapp">MyWorkOutApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>