<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navBar" >
    <item
        android:id="@+id/homeButton"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item android:id="@+id/bmiHistory"
        android:title="@string/history"/>
    <item android:id="@+id/calorieList"
        android:title="@string/track_calories"/>
    <item android:id="@+id/exerciseList"
        android:title="@string/exercise_list"/>
    <item android:id="@+id/placeHolder"
        android:title="@string/placeholder">
        <menu>
            <item
                android:id="@+id/aSubCategory"
                android:title="@string/food_list"/>
            <item
                android:id="@+id/aSubCategory2"
                android:title="@string/food_list"/>
        </menu>
    </item>
</menu>